--- a/pages/style.css
+++ b/pages/style.css
@@ -3,14 +3,14 @@
     src: url(../fonts/NunitoSans-VariableFont_YTLC\,opsz\,wdth\,wght.ttf)
 }
 html {
-    width: 1438px;
+    width: 100%;
 }
 
 .block2 {
     background-color:black;
-    width: 1438px;
+    width: 100%;
 
-    margin-top: -100px;
+    margin-top: -150px;
 }
 .block2_projects__text_blocks {
     display: flex;
@@ -116,23 +116,37 @@ html {
     opacity: 0;
     transition: opacity 800ms ease;
   }
+
+  .block2_projects__city {
+    display: none;
+  }
+
+  .block2_projects__city.active {
+    display: block;
+  }
   
   .slider__images .image.active {
     opacity: 1;
+  }
+  .sliderText {
+    display: flex;
+    flex-direction: column;
+    margin: left 125px; ;
+    margin-top: 42px;
+    width: 161px;
   }
   
   .slider__arrows {
     position: absolute;
     top: 0;
-    left: 20px;
-    width: 100%;
+    left: 70px;
     height: 100%;
     color: #fff;
   }
   
   .slider__arrow {
     position: absolute;
-    width: 15%;
+    width: 100%;
     height: 100%;
     font-size: 20px;
     text-align: center;
@@ -158,6 +172,15 @@ html {
     background-size: contain;
     background-repeat: no-repeat;
   }
+  .slider__arrow.left:before {
+    content: '';
+    position: absolute;
+    display: block;
+    top: -25px;
+    left: -25px;
+    right: -25px;
+    bottom: -25px;
+  }
   
   .slider__arrow.right {
     width: 42px;
@@ -170,7 +193,15 @@ html {
     background-size: contain;
     background-repeat: no-repeat;
   }
-  
+  .slider__arrow.right:before {
+    content: '';
+    position: absolute;
+    display: block;
+    top: -25px;
+    left: -25px;
+    right: -25px;
+    bottom: -25px;
+  }
   .slider__dots {
     display: flex;
     justify-content: center;
@@ -187,7 +218,7 @@ html {
     border-radius: 50%;
     margin: 0 5px;
     cursor: pointer;
-    transition: background 0.4s ease;
+    transition:  0.4s ease;
   }
   
   .slider__dots-item:hover, .slider__dots-item.active {
