--- a/pages/style.css
+++ b/pages/style.css
@@ -1,226 +1,252 @@
 @font-face {
-    font-family: Nunito Sans;
-    src: url(../fonts/NunitoSans-VariableFont_YTLC\,opsz\,wdth\,wght.ttf)
+  font-family: Nunito Sans;
+  src: url(../fonts/NunitoSans-VariableFont_YTLC\,opsz\,wdth\,wght.ttf)
 }
+
 html {
-    width: 100%;
+  width: 100%;
 }
 
 .block2 {
-    background-color:black;
-    width: 100%;
+  background-color: black;
+  width: 100%;
 
-    margin-top: -150px;
+  margin-top: -150px;
 }
+
 .block2_projects__text_blocks {
-    display: flex;
-    flex-direction: row;
-}
-.block2_projects__text {
-    margin-top: 220px;
-    width: 442px;
-    margin-left: 134px;
-}
-.block2_projects__text_h1 {
-    font-family: Yeseva One;
-    font-size: 27px;
-    color: #E3B873;
-}
-.block2_projects__text_p {
-    font-family: Nunito Sans;
-    font-size: 14px;
-    margin-top: 34px;
-    color: #FFFFFF;
-}
-.block2_projects__text_blocks1 {
-    display: flex;
-    flex-direction: column;
-    margin-top: 42px;
-    width: 161px;
-}
-.text_blocks1_h1 {
-    font-family: Yeseva One;
-    font-size: 18px;
-    color: #E3B873;
-}
-.text_blocks1_p {
-    margin-top: 8px;
-    font-family: Nunito Sans;
-    font-size: 13px;
-    color:#FFFFFF;
-}
-.block2_projects__text_blocks2 {
-    display: flex;
-    flex-direction: column;
-    margin-top: 42px;
-    margin-left: 29px;
-}
-
-.block2_img{
-    margin-left: 135px;
-    margin-top: 5px;
-}
-
-.block2_3 {
-    display: flex;
-    flex-direction: row;
-    height: 650px;
-}
-.block3 {
-    margin-top: -550px;
-    margin-left: 550px;
-}
-.block3__navigation {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 55px;
-    margin-left: 20px;
-    text-decoration: none;
-    color: white;
-}
-.block3__navigation__nav{
   display: flex;
   flex-direction: row;
 }
+
+.block2_projects__text {
+  margin-top: 220px;
+  width: 442px;
+  margin-left: 134px;
+}
+
+.block2_projects__text_h1 {
+  font-family: Yeseva One;
+  font-size: 27px;
+  color: #E3B873;
+}
+
+.block2_projects__text_p {
+  font-family: Nunito Sans;
+  font-size: 14px;
+  margin-top: 34px;
+  color: #FFFFFF;
+}
+
+.block2_projects__text_blocks1 {
+  display: flex;
+  flex-direction: column;
+  margin-top: 42px;
+  width: 161px;
+}
+
+.text_blocks1_h1 {
+  font-family: Yeseva One;
+  font-size: 18px;
+  color: #E3B873;
+}
+
+.text_blocks1_p {
+  margin-top: 8px;
+  font-family: Nunito Sans;
+  font-size: 13px;
+  color: #FFFFFF;
+}
+
+.block2_projects__text_blocks2 {
+  display: flex;
+  flex-direction: column;
+  margin-top: 42px;
+  margin-left: 29px;
+}
+
+.block2_img {
+  margin-left: 135px;
+  margin-top: 5px;
+}
+
+.block2_3 {
+  display: flex;
+  flex-direction: row;
+  height: 650px;
+}
+
+.block3 {
+  margin-top: -550px;
+  margin-left: 550px;
+}
+
+.block3__navigation {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 55px;
+  margin-left: 20px;
+  text-decoration: none;
+  color: white;
+}
+
+.block3__navigation__nav {
+  display: flex;
+  flex-direction: row;
+}
+
 .block3__navigation__nav-item {
-    text-decoration: none;
-    list-style-type: none;
-    margin-left: 60px;
-    font-size: 14px;
-    color: #FFFFFF;
+  text-decoration: none;
+  list-style-type: none;
+  margin-left: 60px;
+  font-size: 14px;
+  color: #FFFFFF;
 }
+.block3__navigation__nav-item.active {
+  text-decoration: underline;
+  color: #E3B873;
+}
+
 .block3__navigation__nav-item:hover {
-    text-decoration:underline;
-    color: #E3B873;
+  text-decoration: underline;
+  color: #E3B873;
 }
+
 .slider {
-    position: relative;
-    margin-top: 40px;
-    margin-left: 125px;
-  }
-  
-  .slider__images {
-    position: relative;
-    width: 600px;
-    height: 400px;
-  }
-  
-  .slider__images .image {
-    background-size: cover;
-    background-position: center center;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: 0;
-    transition: opacity 800ms ease;
-  }
+  position: relative;
+  margin-top: 40px;
+  margin-left: 125px;
+}
 
-  .block2_projects__city {
-    display: none;
-  }
+.slider__images {
+  position: relative;
+  width: 600px;
+  height: 400px;
+}
 
-  .block2_projects__city.active {
-    display: block;
-  }
-  
-  .slider__images .image.active {
-    opacity: 1;
-  }
-  .sliderText {
-    display: flex;
-    flex-direction: column;
-    margin: left 125px; ;
-    margin-top: 42px;
-    width: 161px;
-  }
-  
-  .slider__arrows {
-    position: absolute;
-    top: 0;
-    left: 70px;
-    height: 100%;
-    color: #fff;
-  }
-  
-  .slider__arrow {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    font-size: 20px;
-    text-align: center;
-    cursor: pointer;
-    opacity: 100;
-    transition: opacity 0.4s ease;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .slider__arrow:hover {
-    opacity: 1;
-  }
-  
-  .slider__arrow.left {
-    width: 42px;
-    height: 13px;
-    border: none;
-    margin-top: 390px;
-    margin-left: -560px;
-    background-image: url('..//images/стрелка1.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-  .slider__arrow.left:before {
-    content: '';
-    position: absolute;
-    display: block;
-    top: -25px;
-    left: -25px;
-    right: -25px;
-    bottom: -25px;
-  }
-  
-  .slider__arrow.right {
-    width: 42px;
-    height: 13px;
-    margin-left: -430px;
-    margin-top: 390px;
-    border: none;
-    background-image: url('..//images/стрелка2.svg');
-    background-color: transparent;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-  .slider__arrow.right:before {
-    content: '';
-    position: absolute;
-    display: block;
-    top: -25px;
-    left: -25px;
-    right: -25px;
-    bottom: -25px;
-  }
-  .slider__dots {
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    left: -830px;
-    bottom: 0px;
-    width: 100%;
-  }
-  
-  .slider__dots-item {
-    width: 10px;
-    height: 10px;
-    background: #ccc;
-    border-radius: 50%;
-    margin: 0 5px;
-    cursor: pointer;
-    transition:  0.4s ease;
-  }
-  
-  .slider__dots-item:hover, .slider__dots-item.active {
-    background: #727070;
-  }
+.slider__images .image {
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  transition: opacity 800ms ease;
+}
+
+.block2_projects__city {
+  display: none;
+}
+
+.block2_projects__city.active {
+  display: block;
+}
+
+.slider__images .image.active {
+  opacity: 1;
+}
+
+.sliderText {
+  display: flex;
+  flex-direction: column;
+  margin: left 125px;
+  ;
+  margin-top: 42px;
+  width: 161px;
+}
+
+.slider__arrows {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 70px;
+  height: 100%;
+  color: #fff;
+}
+
+.slider__arrow {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
+  text-align: center;
+  cursor: pointer;
+  opacity: 100;
+  transition: opacity 0.4s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.slider__arrow:hover {
+  opacity: 1;
+}
+
+.slider__arrow.left {
+  width: 42px;
+  height: 13px;
+  border: none;
+  margin-top: 390px;
+  margin-left: -560px;
+  background-image: url('..//images/стрелка1.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.slider__arrow.left:before {
+  content: '';
+  position: absolute;
+  display: block;
+  top: -25px;
+  left: -25px;
+  right: -25px;
+  bottom: -25px;
+}
+
+.slider__arrow.right {
+  width: 42px;
+  height: 13px;
+  margin-left: -430px;
+  margin-top: 390px;
+  border: none;
+  background-image: url('..//images/стрелка2.svg');
+  background-color: transparent;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.slider__arrow.right:before {
+  content: '';
+  position: absolute;
+  display: block;
+  top: -25px;
+  left: -25px;
+  right: -25px;
+  bottom: -25px;
+}
+
+.slider__dots {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  left: -830px;
+  bottom: 0px;
+  width: 100%;
+}
+
+.slider__dots-item {
+  width: 10px;
+  height: 10px;
+  background: #ccc;
+  border-radius: 50%;
+  margin: 0 5px;
+  cursor: pointer;
+  transition: 0.4s ease;
+}
+
+.slider__dots-item:hover,
+.slider__dots-item.active {
+  background: #727070;
+}
