--- a/pages/style.css
+++ b/pages/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Nunito Sans;
-  src: url(../fonts/NunitoSans-VariableFont_YTLC\,opsz\,wdth\,wght.ttf)
+  src: url('../fonts/NunitoSans-VariableFont_YTLC,opsz,wdth,wght.ttf')
 }
 
 html {
@@ -10,7 +10,7 @@ html {
 .block2 {
   background-color: black;
   width: 100%;
-
+  
   margin-top: -150px;
 }
 
@@ -28,14 +28,14 @@ html {
 .block2_projects__text_h1 {
   font-family: Yeseva One;
   font-size: 27px;
-  color: #E3B873;
+  color: #e3b873;
 }
 
 .block2_projects__text_p {
-  font-family: Nunito Sans;
+  font-family: Nunito Sans, sans-serif;
   font-size: 14px;
   margin-top: 34px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .block2_projects__text_blocks1 {
@@ -48,14 +48,14 @@ html {
 .text_blocks1_h1 {
   font-family: Yeseva One;
   font-size: 18px;
-  color: #E3B873;
+  color: #e3b873;
 }
 
 .text_blocks1_p {
   margin-top: 8px;
-  font-family: Nunito Sans;
+  font-family: Nunito Sans, sans-serif;
   font-size: 13px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .block2_projects__text_blocks2 {
@@ -88,6 +88,7 @@ html {
   margin-left: 20px;
   text-decoration: none;
   color: white;
+  font-family: Yeseva One;
 }
 
 .block3__navigation__nav {
@@ -100,16 +101,17 @@ html {
   list-style-type: none;
   margin-left: 60px;
   font-size: 14px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
+
 .block3__navigation__nav-item.active {
   text-decoration: underline;
-  color: #E3B873;
+  color: #e3b873;
 }
 
 .block3__navigation__nav-item:hover {
   text-decoration: underline;
-  color: #E3B873;
+  color: #e3b873;
 }
 
 .slider {
@@ -151,8 +153,7 @@ html {
 .sliderText {
   display: flex;
   flex-direction: column;
-  margin: left 125px;
-  ;
+  margin-left: 125px;
   margin-top: 42px;
   width: 161px;
 }
@@ -190,7 +191,7 @@ html {
   border: none;
   margin-top: 390px;
   margin-left: -560px;
-  background-image: url('..//images/стрелка1.svg');
+  background-image: url('../images/arrow1.svg');
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -211,7 +212,7 @@ html {
   margin-left: -430px;
   margin-top: 390px;
   border: none;
-  background-image: url('..//images/стрелка2.svg');
+  background-image: url('../images/arrow2.svg');
   background-color: transparent;
   background-size: contain;
   background-repeat: no-repeat;
@@ -231,15 +232,15 @@ html {
   display: flex;
   justify-content: center;
   position: absolute;
-  left: -830px;
-  bottom: 0px;
+  left: -825px;
+  bottom: 0;
   width: 100%;
 }
 
 .slider__dots-item {
   width: 10px;
   height: 10px;
-  background: #ccc;
+  background: #727070;
   border-radius: 50%;
   margin: 0 5px;
   cursor: pointer;
@@ -248,5 +249,5 @@ html {
 
 .slider__dots-item:hover,
 .slider__dots-item.active {
-  background: #727070;
+  background: #ccc;
 }
